@startuml
'https://plantuml.com/class-diagram

class OccupancyRateUI {


}
class OccupancyRateController{
    +getOccupancyRateByCargoManifest(String code, String cargo_manifest)
    +getOccupancyRateByDate(String code, String date)
}

class Company{
   -shipStore
        -authFacade
        -portStore
        -containerStore
        -databaseConnection

        +Company()
        +getShipStore()
        +getAuthFacade()
          +getPortStore()
          +getContainerStore()
}
class ShipStore{
+ShipStore()
+getBst()
+getShipList()
+addShip(ship)
+containsMMSI(MMSI)
+containsIMO(IMO)
+containsCallSign(callSign)
+getShip(code)
+shipSummary(code)
+getTopNShips(n,start,end)
+getPairsOfShips()
+MMSIOrder(map)
+TravelDistOrder(map)
}


class Ship{
-MMSI;
-name;
-IMO;
-energyGenerators;
-powerOutput;
-callsign;
-vesselType;
-length;
-width;
-capacity;
-draft;
 +Ship(MMSI,name,IMO,callsign,vesselType,length,width,draft,capacity)
  +AddMensage(mensage)
    +getMMSI()
    +getIMO()
    +getName()
    +getWidth()
    +getDetails()
    +getDraft()
    +getLength()
    +getVesselType()
    +getAllMessages()
    +getCapacity()
    +checkMMSI(MMSI);
    +checkName(name);
    +checkIMO(IMO);
    +checkCallSign(callsign);
    +checkVesselType(vesselType);
    +checkLength(length);
    +checkWidth(width);
    +checkDraft(draft);
    +checkCapacity(capacity);

}
class ImportFromDatabase{
+getContainersByShipPortType(String shipIMO, String portID, String type)
+getPositionOfContainer(String containerID)
+getOccupancyRateByCargoManifest(String code, String cargo_manifest)
+getOccupancyRateByDate(String code, String date)
}

OccupancyRateUI ..> OccupancyRateController
OccupancyRateController ..> Company
OccupancyRateController ..> ShipStore
Company "1" --> "1" ShipStore : uses
ShipStore "1" --> "*" Ship  : knows >
OccupancyRateController ..> ImportFromDatabase


@enduml